# SwarmDev

./: README.md  README_CN.md  pyproject.toml  swarmdev.example.yaml
codeswarm/: __init__.py  cli.py  mcp_server.py
codeswarm/agents/: __init__.py  claude_code_adapter.py  codex_adapter.py
codeswarm/channels/: __init__.py  telegram_channel.py
codeswarm/core/: config.py  types.py
codeswarm/orchestrator/: __init__.py  auto_tester.py  decomposer.py  parallel_scheduler.py  scheduler.py
swarmdev/: __init__.py  cli.py
swarmdev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
swarmdev/agents/: __init__.py  claude_code_adapter.py  codex_adapter.py
swarmdev/channels/: __init__.py  telegram_channel.py
swarmdev/core/: config.py
swarmdev/orchestrator/: __init__.py  auto_tester.py  decomposer.py  parallel_scheduler.py  scheduler.py
tests/: test_auto_tester.py  test_claude_code_adapter.py  test_codex_adapter.py  test_decomposer.py  test_integration.py  test_parallel_scheduler.py  test_scheduler.py  test_telegram_channel.py
